# release-please-multiple

./: Cargo.toml  README.md
.github/release-please/: config.json  manifest.json
.github/workflows/: release.yaml  test_core.yaml  test_prover.yaml
core/: CHANGELOG.md  Cargo.toml
core/core-multiple-1/src/: lib.rs
core/core-multiple-3/: Cargo.toml
prover/: CHANGELOG.md  Cargo.toml
prover/prover-multiple-1/: Cargo.toml
prover/prover-multiple-2/: Cargo.toml
zkstack/: CHANGELOG.md  Cargo.toml
